--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/router-store": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "6.0.0-rc.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
